// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text No Wrap 1`] = `
<span
  class="Text--text- Text--noWrap-"
  style="width: 100%;"
>
  Lorem Ipsum dolor sit amed
</span>
`;

exports[`Text Render Basic Text 1`] = `
<span
  class="Text--text-"
  style="width: 100%;"
>
  FioriText
</span>
`;

exports[`Text Render Whitespace 1`] = `
<span
  class="Text--text- Text--renderWhitespace-"
  style="width: 100%;"
>
  Lorem Ipsum dolor sit amed
</span>
`;
